integrated dynamic, viem on the backend, and disconnect event

--- a/game/package.json
+++ b/game/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "agar.io-clone",
+  "name": "plata-o-plomo",
   "version": "1.0.0",
-  "description": "A simple Agar.io clone",
+  "description": "An Agar.io for web3",
   "main": "server/server.js",
   "scripts": {
     "build": "gulp build",
@@ -11,14 +11,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/owenashurst/agar.io-clone.git"
+    "url": "https://github.com/NounsRoyale/plata-o-plomo"
   },
-  "author": "Huy Tran",
-  "maintainers": [
-    {
-      "name": "Owen Ashurst"
-    }
-  ],
+  "author": "Bruno Eleodoro & Nezzar",
   "license": "MIT",
   "contributors": [
     "abalabahaha <hi@abal.moe> (https://github.com/abalabahaha)",
@@ -42,10 +37,18 @@
     "@babel/core": "^7.21.8",
     "@babel/eslint-parser": "^7.21.8",
     "@babel/preset-env": "^7.21.5",
+    "@babel/preset-react": "^7.24.7",
+    "@dynamic-labs/ethereum": "^2.2.10",
+    "@dynamic-labs/sdk-react-core": "^2.2.10",
+    "@dynamic-labs/wagmi-connector": "^2.2.10",
+    "@tanstack/react-query": "^5.51.1",
+    "@web3modal/ethers5": "^5.0.6",
     "babel-loader": "^9.1.2",
     "chai": "^4.3.7",
+    "dotenv": "^16.4.5",
     "eslint": "^8.40.0",
     "eslint-plugin-import": "^2.27.5",
+    "ethers": "5.7.2",
     "express": "^4.18.2",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
@@ -55,11 +58,14 @@
     "jshint": "^2.13.6",
     "mocha": "^10.2.0",
     "nodemon": "^3.0.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sat": "^0.9.0",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "sqlite3": "^5.1.6",
     "uuid": "^9.0.0",
+    "viem": "^2.17.3",
     "webpack": "^5.82.1",
     "webpack-stream": "^7.0.0"
   },
