--- a/game/Dockerfile
+++ b/game/Dockerfile
@@ -1,13 +1,14 @@
-FROM node:14-alpine
+FROM node:18-alpine
 
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
 COPY package.json /usr/src/app/
-RUN npm install && npm cache clean --force
+COPY yarn.lock /usr/src/app/
+RUN yarn install && yarn cache clean
 COPY . /usr/src/app
 
-CMD [ "npm", "start" ]
+CMD [ "yarn", "start" ]
 
 HEALTHCHECK  --interval=5m --timeout=3s \
   CMD wget --no-verbose --tries=1 --spider http://localhost:3000/ || exit 1
